--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Вторая итерация</title>
+    <title>Итерация №4</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
@@ -23,66 +23,16 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-            <div class="container">
-                <h1>Интернет-магазин компьютерной техники</h1>
-            </div>
-        </div>
-        <div class="swiper-slide">
           <div class="container">
-            <h1 class="title">Наша цель</h1>
-            <ul class="text">
-              <p>Создание максимально интуитивно понятного интерфейса,
-                то есть устранить как можно больше неудобств между пользователем и системой</p>
-            </ul>
+            <h1 class="title">Component Diagram</h1>
+            <img src="images/4/ComponentDiagram.png" height="600" alt="">
           </div>
         </div>
         <div class="swiper-slide">
           <div class="container">
-            <h1 class="title">Глоссарий</h1>
-            <ul class="text">
-              <li>Интерфейс - Это договор между системой и внешним окружением.</li>
-              <li>Удобный - делающий что-либо приятным, легким в осуществлении чего-либо.</li>
-            </ul>
+            <h1 class="title">Siquence Diagram</h1>
+            <img src="images/4/SiquencуDiagram.png" height="600" alt="">
           </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="container">
-            <h1 class="title">Stakeholders</h1>
-            <ul class="text">
-              <li>Государство</li>
-              <li>Потребители</li>
-              <li>Потребители</li>
-            </ul>
-          </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="container">
-            <h1 class="title">Бизнес-правила</h1>
-            <ul class="text">
-                <li>Начинайте с ввода данных</li>
-                <li>Сообщение об ошибке и предупреждения</li>
-                <li>Используйте сочетающиеся формы</li>
-                <li>Radio Buttons, Dropdowns и Checkboxes</li>
-                <li>По возможности исключайте поля необязательного ввода</li>
-                <li>Используйте автозаполнение для больших форм</li>
-                <li>Используйте условную логику</li>
-                <li>Используйте Placeholder правильно</li>
-                <li>Сообщайте о следующих шагах</li>
-                <li>Проинформируйте пользователя, если поле требует определенных критериев</li>
-            </ul>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="container">
-                <h1>Контекстная диаграмма</h1>
-                <img src="images/ce5IURjHDo.jpg" alt="">
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="container__1">
-                <h1>Модель бизнес процессов</h1>
-                <img src="images/5u71QGJaQSQ.jpg" alt="">
-            </div>
         </div>
       </div>
       <div class="swiper-pagination"></div>
